export enum TestIds {
  // Onboarding Wallet Connect
  ONBOARDING_CONNECT_WALLET_BUTTON = 'ONBOARDING_CONNECT_WALLET_BUTTON',
  ONBOARDING_CONNECT_WALLET_SCREEN = 'ONBOARDING_CONNECT_WALLET_SCREEN',
  ONBOARDING_CONNECT_WALLET_CONNECT_OPTION_BUTTON = 'ONBOARDING_CONNECT_WALLET_CONNECT_OPTION_BUTTON',
  ONBOARDING_CONNECT_METAMASK_OPTION_BUTTON = 'ONBOARDING_CONNECT_METAMASK_OPTION_BUTTON',
  ONBOARDING_CONNECT_COINBASE_OPTION_BUTTON = 'ONBOARDING_CONNECT_COINBASE_OPTION_BUTTON',
  ONBOARDING_CONNECT_GUEST_OPTION_BUTTON = 'ONBOARDING_CONNECT_GUEST_OPTION_BUTTON',

  // Conversation List
  CONVERSATION_LIST_SCREEN = 'CONVERSATION_LIST_SCREEN',
  CONVERSATION_LIST_ITEM = 'CONVERSATION_LIST_ITEM',
  CONVERSATION_LIST_ITEM_AVATAR = 'CONVERSATION_LIST_ITEM_AVATAR',
  CONVERSATION_LIST_ITEM_TITLE = 'CONVERSATION_LIST_ITEM_TITLE',
  CONVERSATION_LIST_ITEM_TEXT = 'CONVERSATION_LIST_ITEM_TEXT',
  CONVERSATION_LIST_ITEM_TIME = 'CONVERSATION_LIST_ITEM_TIME',
  CONVERSATION_LIST_ALL_MESSAGES_TITLE = 'CONVERSATION_LIST_ALL_MESSAGES_TITLE',
  CONVERSATION_LIST_REQUESTS_TITLE = 'CONVERSATION_LIST_REQUESTS_TITLE',
  CONVERSATION_LIST_EMPTY_STATE = 'CONVERSATION_LIST_EMPTY_STATE',
  CONVERSATION_LIST_ALL_MESSAGES_BUTTON = 'CONVERSATION_LIST_ALL_MESSAGES_BUTTON',
  CONVERSATION_LIST_REQUESTS_BUTTON = 'CONVERSATION_LIST_REQUESTS_BUTTON',
  CONVERSATION_LIST_PROFILE_BUTTON = 'CONVERSATION_LIST_PROFILE_BUTTON',
  CONVERSATION_LIST_NEW_BUTTON = 'CONVERSATION_LIST_NEW_BUTTON',

  // Conversation
  CONVERSATION_SCREEN = 'CONVERSATION_SCREEN',
  CONVERSATION_INPUT = 'CONVERSATION_INPUT',
  CONVERSATION_MESSAGE = 'CONVERSATION_MESSAGE',
  CONVERSATION_SEND_BUTTON = 'CONVERSATION_SEND_BUTTON',
  CONVERSATION_CAMERA_BUTTON = 'CONVERSATION_CAMERA_BUTTON',
  CONVERSATION_GALLERY_BUTTON = 'CONVERSATION_GALLERY_BUTTON',
  CONVERSATION_PROFILE_BUTTON = 'CONVERSATION_PROFILE_BUTTON',
  CONVERSATION_HEADER_TITLE = 'CONVERSATION_HEADER_TITLE',

  // Group
  GROUP_SCREEN = 'GROUP_SCREEN',
  GROUP_INPUT = 'GROUP_INPUT',
  GROUP_MESSAGE = 'GROUP_MESSAGE',
  GROUP_SEND_BUTTON = 'GROUP_SEND_BUTTON',
  GROUP_CAMERA_BUTTON = 'GROUP_CAMERA_BUTTON',
  GROUP_GALLERY_BUTTON = 'GROUP_GALLERY_BUTTON',
  GROUP_PROFILE_BUTTON = 'GROUP_PROFILE_BUTTON',
  GROUP_HEADER_TITLE = 'GROUP_HEADER_TITLE',

  // Search
  SEARCH_SCREEN = 'SEARCH_SCREEN',
  SEARCH_INPUT = 'SEARCH_INPUT',
  SEARCH_RESULT = 'SEARCH_RESULT',
  SEARCH_RECENT_RESULT = 'RECENT_RESULT',
  SEARCH_CONTACTS_RESULT = 'CONTACTS_RESULT',
  SEARCH_START_BUTTON = 'SEARCH_START_BUTTON',
  SEARCH_PARTICIPANTS_LIST_PILL = 'SEARCH_PARTICIPANTS_LIST_PILL',

  // Account
  ACCOUNT_SCREEN = 'ACCOUNT_SCREEN',
}
